[gd_scene load_steps=14 format=2]

[ext_resource path="res://Scenes/Battle/BattleSwitchContainer.gd" type="Script" id=1]
[ext_resource path="res://Scenes/Battle/HealthBar.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/MainUI/MiscritIcon.tscn" type="PackedScene" id=5]
[ext_resource path="res://Assets/Battle/5_AbilityButtonElementBG.png" type="Texture" id=6]
[ext_resource path="res://Assets/Ui/Miscrits/Earth_Type.png" type="Texture" id=8]
[ext_resource path="res://Assets/Ui/281_WorldNeighborAvatarBG.png" type="Texture" id=9]

[sub_resource type="StyleBoxFlat" id=37]
content_margin_left = 10.0
content_margin_right = 10.0
content_margin_top = 10.0
content_margin_bottom = 10.0
bg_color = Color( 0.878431, 0.968627, 0.988235, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 1
border_width_bottom = 2
border_color = Color( 0.305882, 0.305882, 0.305882, 1 )
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3
shadow_color = Color( 0, 0, 0, 0.262745 )
shadow_size = 1
shadow_offset = Vector2( 0, 2 )

[sub_resource type="Gradient" id=22]
colors = PoolColorArray( 0.503906, 0.503906, 0.503906, 1, 0.882813, 0.882813, 0.882813, 1 )

[sub_resource type="GradientTexture" id=23]
gradient = SubResource( 22 )

[sub_resource type="StyleBoxTexture" id=24]
texture = SubResource( 23 )
region_rect = Rect2( 0, 0, 2048, 1 )

[sub_resource type="StyleBoxEmpty" id=25]
content_margin_right = 1.0

[sub_resource type="DynamicFontData" id=12]
font_path = "res://Assets/Font/2_MiscriaMedium_Miscria-Medium.ttf"

[sub_resource type="DynamicFont" id=36]
size = 11
outline_size = 2
outline_color = Color( 0, 0, 0, 0 )
use_filter = true
extra_spacing_char = 2
extra_spacing_space = 1
font_data = SubResource( 12 )

[node name="BattleSwitchContainer" type="Panel"]
margin_right = 161.0
margin_bottom = 72.0
rect_min_size = Vector2( 161, 72 )
custom_styles/panel = SubResource( 37 )
script = ExtResource( 1 )

[node name="IconPanel" type="TextureRect" parent="."]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 5.0
margin_top = -30.0
margin_right = 67.0
margin_bottom = 31.0
mouse_filter = 2
texture = ExtResource( 9 )
expand = true

[node name="Icon" parent="IconPanel" instance=ExtResource( 5 )]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -25.5
margin_top = -25.5
margin_right = 25.5
margin_bottom = 25.5
mouse_filter = 2

[node name="HealthBar" parent="." instance=ExtResource( 2 )]
margin_left = 83.0
margin_top = 44.0
margin_right = 187.0
margin_bottom = 55.0
mouse_filter = 2
custom_styles/fg = SubResource( 24 )
custom_styles/bg = SubResource( 25 )

[node name="Name" type="Label" parent="."]
margin_left = 78.0
margin_top = 21.0
margin_right = 209.0
margin_bottom = 36.0
custom_colors/font_color = Color( 0.227451, 0.431373, 0.537255, 1 )
custom_fonts/font = SubResource( 36 )
text = "Kusstik"

[node name="IconElement" type="TextureRect" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -22.5
margin_top = -4.0
margin_right = 4.5
margin_bottom = 23.0
mouse_filter = 2
texture = ExtResource( 6 )
expand = true
__meta__ = {
"_edit_group_": true
}

[node name="Element" type="TextureRect" parent="IconElement"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -12.5
margin_top = -12.5
margin_right = 12.5
margin_bottom = 12.5
mouse_filter = 2
texture = ExtResource( 8 )
expand = true

[node name="click" type="TextureButton" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="OptionButton" type="MenuButton" parent="."]
visible = false
margin_right = 161.0
margin_bottom = 73.0

[connection signal="pressed" from="click" to="." method="_on_click_pressed"]
